# rsrocket

./: Cargo.toml  run
help/: help.txt
src/: cli.rs  main.rs
testing/: test.json  test2.json
